// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeHistoryTab should loading 1`] = `
<div>
  <div
    style="padding: 15px;"
  >
    Loading...
  </div>
</div>
`;

exports[`BadgeHistoryTab should render empty 1`] = `
<div>
  <div
    style="padding: 15px;"
  >
    <div
      class="makeStyles-emptyBadgeHistory-153 makeStyles-container-171"
    >
      <div>
        <div
          class="MuiAvatar-root MuiAvatar-circle makeStyles-missingAvatarWrapper-182 makeStyles-missingAvatarBig-183 MuiAvatar-colorDefault"
        >
          <svg>
            e-badge.svg
          </svg>
        </div>
      </div>
      <p
        class="MuiTypography-root makeStyles-missingListText-172 MuiTypography-body1"
      >
        There is no Badge History
      </p>
    </div>
  </div>
</div>
`;
